# substreams-database-change

./: .gitignore  .sfreleaser  CHANGELOG.md  Cargo.toml  Makefile  README.md  RELEASE.md  buf.gen.yaml  go.mod  rust-toolchain.toml  substreams-databases-v0.10.3.spkg  substreams.yaml
.github/workflows/: buf.yml  ci.yml  release.yml
pb/sf/substreams/sink/database/v1/: database.pb.go
proto/: buf.md  buf.yaml
proto/database/v1/: database.proto
proto/sf/substreams/sink/database/v1/: database.proto
proto/sf/substreams/sink/database_changes/v1/: database_changes.proto
proto/substreams/databases/deltas/v1/: models.proto
proto/substreams/sink/database/v1/: database.proto
src/: change.rs  helpers.rs  lib.rs  tables.rs
src/pb/: mod.rs  sf.substreams.sink.database.v1.rs  substreams.database.deltas.v1.rs  substreams.database.v1.rs  substreams.databases.deltas.v1.rs  substreams.sink.database.v1.rs
