[package]
name = "substreams-database-change"
version = "1.2.1"
edition = "2021"
description = "Substreams database change containg helpers"
authors = ["StreamingFast Contributors <team@streamingfast.io>"]
license = "Apache-2.0"
homepage = "https://substreams.streamingfast.io/"
repository = "https://github.com/streamingfast/substreams-sink-database-changes"
readme = "README.md"
keywords = [ "substreams", "streamingfast", "firehose", "thegraph", "entity"]
categories = ["api-bindings", "external-ffi-bindings", "wasm"]
rust-version = "1.60"

[dependencies]
prost = "0.11"
prost-types = "0.11"
substreams = "0.5"
